tests/cmp/dc-label-multiple-semicolons.golden
Parse Error:
tests/cmp/dc-label-multiple-semicolons.trp:1:37 unexpected token TokenSemi
